syntax = "proto3";

package clientpb;

option go_package = ".";

// 定义发送请求信息
message ClientSendCommandInfo{
  // 定义发送的参数，采用驼峰命名方式，小写加下划线，如：student_name
  // 参数类型 参数名 标识号(不可重复)
  string client_id = 1;
  string command_info = 2;
}

// 定义发送请求信息
message ClientRecvResultInfo{
  // 定义发送的参数，采用驼峰命名方式，小写加下划线，如：student_name
  // 参数类型 参数名 标识号(不可重复)
  //string client_id = 1;
  string result = 1;
}

message ClientRegister{
  string client_id = 1;
}

//client 发送单个命令
message ClientRequestSingleCommand{
  string request_command = 1;
}

message HostInfoListResponse{
  repeated HostInfo hostinfo_list = 1;
}

// HostList 结构体，定义服务返回的数据结构
message HostInfo {
  string client_id = 1;
  string hostname = 2;
  string ip = 3;
  string conn_port = 4;
  string os = 5;
  string privilege = 6;
  string version = 7;
  string remarks = 8;
}

service ClientSendServerService {

  //客户端注册
  rpc ClientRegisterService(stream ClientRegister) returns (stream ClientRecvResultInfo);

  //客户端发送命令与Implant交互
  rpc ClientSendCommandToImplantService(ClientSendCommandInfo) returns (ClientRecvResultInfo);

  //客户端发送命令与Server交互：获取host信息
  rpc ClientRequestHostInfo(ClientRequestSingleCommand) returns (HostInfoListResponse);

}